# forthright

./: README.md  pyproject.toml  requirements.txt  requirements_client.txt  requirements_server.txt
examples/: backend.py  client.py
src/forthright/: __init__.py  forthright.py
tests/: backend.py  client.py
