[project]
name = "forthright"
version = "0.0.1"
authors = [
  { name="Marius Facktor", email="mariusfacktor@gmail.com" },
]
description = "Allows you to seemingly call a server function directly from the client."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Werkzeug>=3.1",
    "Jinja2>=3.1.2",
    "itsdangerous>=2.2",
    "click>=8.1.3",
    "blinker>=1.9",
    "importlib-metadata>=3.6; python_version < '3.10'",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "Flask>=3.1.0",
    "idna>=3.10",
    "MarkupSafe>=3.0.2",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]



[project.urls]
Homepage = "https://github.com/mariusfacktor/forthright"
Issues = "https://github.com/mariusfacktor/forthright/issues"



[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "forthright"




